--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   padding-right: 130px;
   padding-bottom: 60px;
   background-image: url(assets/deco1.svg), url(assets/deco3\ 1.svg), url(assets/deco2.svg), url(assets/Ellipse\ 1.svg), url(assets/deco3\ 2.svg), linear-gradient(80deg, rgb(1, 6, 40) 0%, rgb(3, 21, 133) 90%);
-  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
   background-position: top right, 6% 9%, 30% 20%, 78% 38%, 33% 59%, right;
 }
 
@@ -53,6 +53,10 @@ body {
 .menu-logo {
   display: flex;
   align-items: center;
+}
+
+.menu-burger {
+  display: none;
 }
 
 .menu-options {
@@ -99,7 +103,7 @@ body {
   font-size: 16px;
   letter-spacing: 0.045;
   text-align: justify;
-  width: 380px;
+  width: 65%;
   line-height: 32px;
   color: rgb(239, 239, 239);
 }
@@ -390,6 +394,158 @@ body {
   line-height: 32px;
   text-align: right;
   color: rgb(255, 255, 255);
+}
+
+@media (max-width: 600px) {
+  body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    padding-left: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    background-position: top right, 6% 9%, 30% 20%, 78% 38%, 33% 59%, right;
+  }
+  body .main {
+    display: flex;
+    flex-direction: column;
+    grid-row-gap: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
+  }
+  body .main div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+  }
+  body .main div p {
+    width: 100%;
+  }
+  body .main img {
+    width: 100% w;
+  }
+  body .main p {
+    width: 80vw;
+  }
+  body .main .menu {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  body .main .menu .menu-logo {
+    align-items: flex-start;
+    width: 100%;
+  }
+  body .main .menu .menu-logo img {
+    width: 100%;
+  }
+  body .main .menu .menu-burger {
+    display: flex;
+    align-items: end;
+  }
+  body .main .menu .menu-burger i {
+    font-size: 30px;
+    color: white;
+  }
+  body .main .menu .menu-options {
+    display: none;
+  }
+  body .main .first-div {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  body .main .first-div p {
+    text-align: center;
+  }
+  body .main .first-div .first-div-title {
+    font-weight: bold;
+  }
+  body .main .first-div .first-div-subt {
+    font-size: 48px;
+    font-weight: bold;
+  }
+  body .main .first-div .first-div-text {
+    box-sizing: border-box;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 32px;
+    text-align: justify;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  body .main .first-div .buttons .butt1, body .main .first-div .buttons .butt2 {
+    width: 60vw;
+    height: 60px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 24px;
+  }
+  body .main .second-div p {
+    text-align: center;
+  }
+  body .main .second-div button {
+    align-self: center;
+  }
+  body .main .third-div {
+    display: flex;
+    flex-direction: column;
+  }
+  body .main .third-div .third-div-box {
+    display: flex;
+    flex-direction: column;
+  }
+  body .last-div {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin-top: 20px;
+    align-items: center;
+  }
+  body .last-div .last-div-upper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    margin-top: 20px;
+  }
+  body .last-div .last-div-upper .last-div-logo {
+    grid-row: 1;
+    grid-column-start: span 2;
+    justify-content: center;
+  }
+  body .last-div .last-div-upper .last-div-options {
+    grid-row: 2;
+    grid-template-columns: 0.5fr;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  body .last-div .last-div-upper .last-div-nav {
+    grid-row: 3;
+    grid-column-start: span 2;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  body .last-div hr {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  body .last-div .last-div-endbar {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  body .last-div .last-div-endbar .copyright {
+    grid-row: 1;
+    text-align: center;
+  }
+  body .last-div .last-div-endbar .useAndPolicy {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
