It works on my smartphone but my laptop inspector does stupid things if I open and close it several times

--- a/Sasstyle.scss
+++ b/Sasstyle.scss
@@ -404,7 +404,6 @@ body {
             display: flex;
             flex-direction: column;
             padding: 10px;
-            padding-left: 0px;
             margin-top: 10px;
             margin-bottom: 10px;
             box-sizing: border-box;
@@ -423,7 +422,11 @@ body {
                 flex-direction: column;
                 margin: 0px;
                     p {
-                    width: 100%;
+                        width: 100%;
+                        box-sizing: border-box;
+                        text-align: center;
+                        padding-left: 5px;
+                        padding-right: 5px
                     }
                 }
 
